.env base changes

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=your_key_code
-CLERK_SECRET_KEY=your_key_code
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
 
-OPENAI_API_KEY=sk-your_key_code
-REPLICATE_API_TOKEN=your_key_code
+OPENAI_API_KEY=
+REPLICATE_API_TOKEN=
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
@@ -16,9 +16,9 @@ REPLICATE_API_TOKEN=your_key_code
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='your_url'
+DATABASE_URL=
 
-STRIPE_API_KEY=your_key_code
-STRIPE_WEBHOOK_SECRET=your_key_code
+STRIPE_API_KEY=
+STRIPE_WEBHOOK_SECRET=
 
-NEXT_PUBLIC_APP_URL=your_url
+NEXT_PUBLIC_APP_URL=
